# pijama

./: Cargo.toml
pijama/: Cargo.toml
pijama-ast/: Cargo.toml
pijama-ast-lowering/: Cargo.toml
pijama-ast-lowering/src/: context.rs  error.rs  lib.rs  scope.rs
pijama-ast-lowering/src/lowering/: atom.rs  expr.rs  func.rs  ident.rs  literal.rs  mod.rs  ty.rs
pijama-ast/src/: atom.rs  expr.rs  func.rs  ident.rs  lib.rs  literal.rs  op.rs  program.rs  ty.rs
pijama-core/: Cargo.toml
pijama-core/src/: expr.rs  func.rs  lib.rs  literal.rs  name.rs  prim_op.rs  program.rs
pijama-hir/: Cargo.toml
pijama-hir-lowering/: Cargo.toml
pijama-hir-lowering/src/: context.rs  error.rs  lib.rs
pijama-hir-lowering/src/lowering/: atom.rs  expr.rs  func.rs  literal.rs  local.rs  mod.rs  name.rs  program.rs  ty.rs
pijama-hir/src/: atom.rs  expr.rs  func.rs  lib.rs  literal.rs  name.rs  prim_op.rs
pijama-interface/: Cargo.toml
pijama-interface/src/: lib.rs
pijama-llvm/: Cargo.toml
pijama-llvm/src/: compiler.rs  lib.rs
pijama-llvm/src/compile/: atom.rs  expr.rs  literal.rs  mod.rs  name.rs
pijama-mir/: Cargo.toml
pijama-mir/src/: atom.rs  expr.rs  func.rs  lib.rs
pijama-parser/: Cargo.toml
pijama-parser/src/: error.rs  lib.rs  parser.lalrpop  token.rs
pijama-std/: Cargo.toml
pijama-std/src/: lib.rs
pijama-ty/: Cargo.toml
pijama-ty/src/: base.rs  inference.rs  label.rs  lib.rs  ty.rs
pijama-ty/src/inference/: context.rs  mod.rs  row.rs  ty.rs
pijama-tycheck/: Cargo.toml
pijama-tycheck/src/: checker.rs  constraint.rs  error.rs  lib.rs  substitution.rs  table.rs  unifier.rs
pijama-tycheck/src/inference/: atom.rs  expr.rs  literal.rs  local.rs  mod.rs
pijama-tycheck/src/substitution/: mod.rs  row.rs  ty.rs
pijama-utils/: Cargo.toml
pijama-utils/src/: lib.rs  show.rs  span.rs
pijama-utils/src/index/: generator.rs  map.rs
pijama/src/: main.rs
pijama/tests/: apply.pj  arithmetic.pj  fibonacci.pj  mod.rs
