[workspace]

members = [
    "pijama",
    "pijama-ast",
    "pijama-ast-lowering",
    "pijama-hir",
    "pijama-hir-lowering",
    "pijama-interface",
    "pijama-llvm",
    "pijama-mir",
    "pijama-parser",
    "pijama-std",
    "pijama-ty",
    "pijama-tycheck",
    "pijama-utils",
]

[profile.release]
debug = true

