[package]
name = "pijama-hir-lowering"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pijama-core = { path = "../pijama-core" }
pijama-hir = { path = "../pijama-hir" }
pijama-ty = { path = "../pijama-ty" }
pijama-tycheck = { path = "../pijama-tycheck" }
pijama-utils = { path = "../pijama-utils" }
