[package]
name = "pijama-llvm"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pijama-mir = { path = "../pijama-mir" }
pijama-ty = { path = "../pijama-ty" }
pijama-tycheck = { path = "../pijama-tycheck" }
pijama-utils = { path = "../pijama-utils" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
