[package]
name = "pijama-tycheck"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pijama-hir = { path = "../pijama-hir" }
pijama-ty = { path = "../pijama-ty" }
pijama-utils = { path = "../pijama-utils" }

log = { version = "0.4" }
