[package]
name = "pijama"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pijama-interface = { path = "../pijama-interface" }

env_logger = { version = "0.8.3" }
